Sun Feb 18 17:13:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: when precompiled pattern is ALL, predicate
	  contextual info must be recomputed

Sun Feb 18 16:39:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.h libxslt/transform.c: defined and exported xsltMaxDepth
	* libxslt/xsltproc.c : added --maxdepth

Sun Feb 18 15:44:33 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: added --novalid and --noout as well
	  as options printing when no args
	* libxslt/variables.c libxslt/transform.c: trying to get rid
	  if some variable/params addressing errors.

Sat Feb 17 14:27:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/attributes.c: fixed use-attribute-sets
	* libxslt/xsltutils.c: add carriage return to xsl:message when
	  needed

Sat Feb 17 02:25:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c: fixed a bug with generate-id()

Sat Feb 17 00:51:53 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.c: started doing more useful stuff in
	  xsltDebug
	* libxslt/transform.[ch] libxslt/variables.[ch] libxslt/templates.c
	  libxslt/xsltInternals.h: changed the way variables/params
	  are stored
	* libxslt/xsltproc.c: removed a pedantic warning
	* libxslt/variables.[ch]: found an ugly evaluation bug

Thu Feb 15 18:14:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/REC/Makefile.am: updated

Thu Feb 15 17:40:28 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxlst/functions.c: fixed ID generation
	* doc/xslt.html doc/html/*.html: updated/regenerated the doc

Thu Feb 15 13:34:42 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c: removed a couple of memleaks

Thu Feb 15 12:41:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.[ch]: exported pattern matching interfaces
	  for numbers.c and future debug module