@@ -1,3 +1,7 @@
+Sun Feb 18 19:11:26 CET 2001 Bjorn Reese <breese@users.sourceforge.net>
+
+	* libxslt/xsltutils.c: xsltSortFunction uses Shell's sort
+
 Sun Feb 18 17:13:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* libxslt/pattern.c: when precompiled pattern is ALL, predicate
